css/obBase.css
/*========== scroll bars ==========*/
/* Let's get this party started */
::-webkit-scrollbar {
    width: 6px;
}
 
/* Handle */
::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background: #44697E; 
}

/*========== base styles ==========*/
body {
  background-color: rgb(6,55,83);
  overflow: hidden;
  /*fonts*/
  color: rgb(255, 255, 255);
  font-family: "Helvetica Neue", Helvetica, "Open Sans";
  font-size: 13px;
  font-weight: 500;
  -webkit-font-smoothing: antialiased;
  letter-spacing: .4px;
  line-height: 1.2;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
  opacity: .85;
  transition: opacity .15s cubic-bezier(0, 0, 0.2, 1);  
  cursor: pointer;
}

a:hover,
a:focus {
  opacity: 1;
  text-decoration: underline;
}

a:active {
  opacity: .75;
}

p a {
  text-decoration: underline;
}

hr {
  width: 100%;
  border: 1px solid rgba(255,255,255,0.08);
}

input {
  outline: none;
  font-size: 14px;
}

input::-webkit-input-placeholder,
input[type="text"]::-webkit-input-placeholder,
input[type="number"]::-webkit-input-placeholder,
select::-webkit-input-placeholder,
textarea::-webkit-input-placeholder,
.txt-placeholder,
.fieldItem .txt-placeholder {
  opacity: .5;
  color: #fff;
  font-size: 14px;
  font-weight: 400;
}

input,
input[type="text"],
input[type="number"],
input[type="email"],
input[type="url"],
select,
textarea {
  border: none;
  color: #000;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
  font-size: 14px;
  font-weight: 500;
}

input[type=range]{
  -webkit-appearance: none;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 90%;
  height: 6px;
  background: #ccc;
  border: none;
  border-radius: 4px;
}

input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: #777;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  background: #eee;
  margin-top: -4px;
}

input[type=range]:focus {
  outline: none;
}

input[type=range]:focus::-webkit-slider-runnable-track {
  background: rgba(255,255,255,0.9);
}

form {
  margin: 0;
}



/*========== structure classes ==========*/

#content {
  margin: auto;
  position: relative;
  width: 950px;
  z-index: 1;
}

#pageNav {
  position: fixed;
  top: 0;
  -webkit-app-region: drag;
  z-index: 3;
}

#pageNav .btn {
  -webkit-app-region: no-drag;
}

#sideBar {
  position: absolute;
  right: 0;
  z-index: 2;
}

.mainContainer {
  position: relative;
  overflow: hidden;
  min-height: 800px;
  margin-bottom: 100px;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.img-rsp {
  display: block;
  max-width: 100%;
  height: auto;
}

.bar {
  height: 50px;
  padding-left: 15px;
  padding-right: 15px;
}

.bar.barFlush {
  padding-left: 0;
  padding-right: 0;
}

.barTxt {
  height: 50px;
  line-height: 50px;
}

#overlay {
  position: fixed;
  top: 50px;
  height: 100%;
  width: 100%;
  background-color: rgba(25,25,25,0.50);
  z-index: 2;
  transition: all .25s cubic-bezier(0, 0, 0.2, .5);
}

.navBar {
  /* use for horizontal nav structures */
  display: flex;
  align-items: center;
  width: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
  box-sizing: border-box;
}

.navBar-main {
  position: fixed;
  top: 0;
  left: 0;
}

.footerBar {
  padding: 3px 0;
}

.navBar .navEnd {
  /* container for nav elements on the right side */
  display: flex;
  flex-grow: 1;
  justify-content: flex-end;
}

.ctrlGroup {
  /* use for any cluster of nav controls */
  padding-left: 4px;
  position: relative;
}

.ctrlGroup:first-child {
  padding-left: 0;
}

.flexContainer {
  overflow: hidden;
}

.flexRow {
  display: flex;
  align-content: flex-start;
  flex-wrap: wrap;
  width: 100%;
  /* reset styles if applied to a list item */
  padding: 0;
}

.flexRow-center {
  justify-content: center;
}

.flexRow [class |= "flexCol"] {
  box-sizing: border-box;
  position: relative;
}

.flexRow.pad [class |= "flexCol"] {
  padding-left: 5px;
  padding-right: 5px;
}

.flexRow.pad [class |= "flexCol"]:first-child {
  padding-left: 0;
}

.flexRow.pad [class |= "flexCol"]:last-child {
  padding-right: 0;
}

.flexRow.negPad {
  /* use to compensate for first and last margins to items in the row if you can't use flex justification */
  margin: 0 -5px 0 -10px;
  width: auto;
}

.flexRow .flexCol-12 {
  /* normally you can make it 100% wide by not using a column. This is here if you need to switch column sizes dynamically. */
  width: 100%;
}

.flexRow .flexCol-11 { flex-basis: 91.66666666666666%; }

.flexRow .flexCol-10 { flex-basis: 83.33333333333334%; }

.flexRow .flexCol-9 { flex-basis: 75%; }

.flexRow .flexCol-8 { flex-basis: 66.66666666666666%; }

.flexRow .flexCol-7 { flex-basis: 58.333333333333336%; }

.flexRow .flexCol-6 { flex-basis: 50%; }

.flexRow .flexCol-5 { flex-basis: 41.66666666666667%; }

.flexRow .flexCol-4 { flex-basis: 33.33333333333333%; }

.flexRow .flexCol-3 { flex-basis: 25%; }

.flexRow .flexCol-2 { flex-basis: 16.666666666666664%;; }

.flexRow .flexCol-1 { flex-basis: 8.333333333333332%; }

.flexExpand {
  /* use to make only one item in a flex row expand */
  flex-grow: 1;
}

.gridItem {
  box-sizing: border-box;
  padding: 33px;
  cursor: pointer;
  width: 317px;
}

.userPage-subViews .gridItem,
.homeView .gridItem {
  border-bottom: 1px solid #327EB8;
  border-right: 1px solid #327EB8;
  opacity: .85;
  transition: opacity .3s cubic-bezier(0, 0, 0.2, 1);
}

.userPage-subViews .gridItem:hover,
.homeView .gridItem:hover {
  opacity: 1;
}

.userPage-subViews .gridItem:nth-child(3n),
.homeView .gridItem:nth-child(3n) {
  border-right: 0;
}

.itemImg {
  position: relative;
  background-position: center;
  background-size: cover;
  border-radius: 3px;
  height: 230px;
  width: 250px;
}

.itemImg.itemImg-large {
  /* flex row collapses unless a specific height is set */
  height: 357px;
  width: 357px;
}

.itemImg.itemImg-small {
  height: 82px;
  width: 82px;
  margin: 0 10px 10px 0;
}

.rowItem {
  flex-grow: 1;
  padding: 25px 15px;
}
/* ... */

